--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css">
-    <title>Ringston</title>
+    <title>Les Paul</title>
   </head>
   <body>
+
     <div class="loading-screen">
       <svg width="106" height="106" viewBox="0 0 106 106" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M53 44.1668L35.3333 19.4335L42.4 8.8335H63.6L70.6667 19.4335L53 44.1668ZM68.4583 30.0335L63.1583 37.5418C72.875 41.5168 79.5 50.7918 79.5 61.8335C79.5 68.8617 76.708 75.6021 71.7383 80.5718C66.7686 85.5415 60.0282 88.3335 53 88.3335C45.9718 88.3335 39.2314 85.5415 34.2617 80.5718C29.2919 75.6021 26.5 68.8617 26.5 61.8335C26.5 50.7918 33.125 41.5168 42.8417 37.5418L37.5417 30.0335C25.6167 35.7752 17.6667 47.7002 17.6667 61.8335C17.6667 71.2045 21.3893 80.1917 28.0156 86.8179C34.6418 93.4442 43.629 97.1668 53 97.1668C62.371 97.1668 71.3581 93.4442 77.9844 86.8179C84.6107 80.1917 88.3333 71.2045 88.3333 61.8335C88.3333 47.7002 80.3833 35.7752 68.4583 30.0335Z" fill="black"/>
@@ -15,12 +16,9 @@
     </div>
     
     <header class="layout-ws">
-      <a href="#" class="logo">Ringston</a>
+      <a href="#" class="logo">Les Paul</a>
       <a href="#" class="collection">
-        <span>Ring Collection</span>
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="11.8533" cy="11.6795" r="9.89771" stroke="white" stroke-width="3"/>
-        </svg>
+        <span>Collection</span>
       </a>
     </header>
 
@@ -38,21 +36,46 @@
       <div class="right">
         <div class="vid-overlay"></div>
         <video autoplay muted loop>
-          <source src="hands.mp4" type="video/mp4">
+          <source src="les paul.mp4" type="video/mp4">
         </video>
       </div>
     </main>
 
-    <section class="details">
-      <div class="inspection layout-ws">
-        <h2>68</h2>
-        <div class="ring-bg">
-          <p>Point Inspection</p>
-        </div>
-        <p>Our 68-point inspection at Ringston meticulously examines every aspect of the jewelry, from clasp strength to gemstone clarity, guaranteeing unparalleled quality in every piece.</p>
+    <section class="details layout-ws">
+      <div class="detail-header">
+        <h2>Iconic Models</h2>
+        <button class="toggle-view">
+          <div class="mask">
+            <div class="button-words">
+              <p>Columns</p>
+              <p>Rows</p>
+            </div>
+          </div>
+        </button>
       </div>
-      <div class="mask marquee">
-        <h3>precision</h3>
+      <div class="cards">
+        <div class="card card1">
+          <img src="/images/les paul standard.webp" alt="Les Paul Standard" class="card-image">
+          <div class="card-details">
+            <h3>Les Paul Standard</h3>
+            <p>Considered the benchmark of the series, known for its versatility and balanced tone.</p>
+          </div>
+        </div>
+        <div class="card card2">
+          <img src="/images/les paul custom.webp" alt="Les Paul Custom" class="card-image">
+          <div class="card-details">
+            <h3>Les Paul Custom</h3>
+            <p>With more luxurious finishes and elegant design, it's a favorite among professional guitarists.</p>
+          </div>
+        </div>
+        <div class="card card3">
+          <img src="/images/les paul modern.webp" alt="Les Paul Modern" class="card-image">
+          <div class="card-details">
+            <h3>Les Paul Modern</h3>
+            <p>More affordable and simplified versions, popular among musicians seeking a raw, straightforward sound.</p>
+          </div>
+        </div>
+        
       </div>
     </section>
 
@@ -60,17 +83,24 @@
       <section class="slider">
         <div class="slide">
           <div class="inner layout-ws">
-            <p class="slide-p">This stunning new necklace from Elegance Collection features a radiant sapphire centerpiece, encircled by a halo of ethereal diamonds, making it a breathtaking addition to any attire.</p>
+            <h2>Origins and Creation</h2>
+            <p class="slide-p">The Les Paul was designed in the 1950s by the legendary guitarist Les Paul in collaboration with
+              Gibson. It was introduced to the market in 1952, quickly becoming one of the most iconic electric guitars of all time.
+            </p>
           </div>
         </div>
         <div class="slide">
           <div class="inner layout-ws">
-            <p class="slide-p">This stunning new necklace from Elegance Collection features a radiant sapphire centerpiece, encircled by a halo of ethereal diamonds, making it a breathtaking addition to any attire.</p>
+            <h2>Evolution Over the Years</h2>
+            <p class="slide-p">Over the decades, the Les Paul has undergone various modifications and improvements, such as the
+              introduction of the Les Paul Standard in 1958 with humbucker pickups, which redefined its sound.</p>
           </div>
         </div>
         <div class="slide">
           <div class="inner layout-ws">
-            <p class="slide-p">This stunning new necklace from Elegance Collection features a radiant sapphire centerpiece, encircled by a halo of ethereal diamonds, making it a breathtaking addition to any attire.</p>
+            <h2>Cultural Impact</h2>
+            <p class="slide-p">Used by legendary musicians like Jimmy Page, Slash, and Eric Clapton, the Les Paul has left an
+              indelible mark on the history of rock and other music genres.</p>
           </div>
         </div>
         <div class="progress"></div>
@@ -82,20 +112,35 @@
         <div class="line-top"></div>
         <div class="layout-ws">
           <div class="mask">
-            <h4>Reserve yours today.</h4>
+            <h4>Ready to Rock?</h4>
           </div>
           <a href="#" class="cta">
             <div class="mask">
               <span>Put me on the list</span>
             </div>
           </a>
-          <p class="contact-desc">Due to the overwhelming demand for our latest luxury ring collection, we've initiated an exclusive waitlist for eager customers, ensuring you'll be among the first to experience the elegance and craftsmanship of this exquisite piece as soon as it becomes available.</p>
+          <p class="contact-desc">
+            Don't miss out on owning the guitar of your dreams. Elevate your music to the next level with our premium guitars.
+          </p>
         </div>
         <div class="line-bottom"></div>
       </div>
     </section>
 
-    <section></section>
+    <section class="customize">
+      <!-- <button class="edit-mode">
+        exit edit mode
+      </button> -->
+
+      <div class="colors">
+        <div class="color" style="--color: #8B4513;" data-color="#8B4513"></div> <!-- Brown (Tobacco Burst) -->
+        <div class="color" style="--color: #FFD700;" data-color="#FFD700"></div> <!-- Gold (Goldtop) -->
+        <div class="color" style="--color: #800000;" data-color="#800000"></div> <!-- Maroon (Wine Red) -->
+        <div class="color" style="--color: #000000;" data-color="#000000"></div> <!-- Black -->
+        <div class="color" style="--color: #aaaaaa;" data-color="#aaaaaa"></div> <!-- White -->
+        <div class="color" style="--color: #FF4500;" data-color="#FF4500"></div> <!-- Orange (Cherry Sunburst) -->
+      </div>
+    </section>
 
     <canvas class="webgl"></canvas>
 
